--- a/lesson_6_vocab.html
+++ b/lesson_6_vocab.html
@@ -89,7 +89,7 @@
       <div class="bar"><div id="barFill" class="bar-fill"></div></div>
     </div>
     <div class="menu-link">
-      <a href="lesson_6_menu_.html" style="margin-left: 10px;">メニューに戻る</a>
+      <a href="index.html" style="margin-left: 10px;">メニューに戻る</a>
     </div>
   </div>
 
