--- a/Lesson_6_vocab Pinyin.html
+++ b/Lesson_6_vocab Pinyin.html
@@ -87,7 +87,7 @@
       <div class="bar"><div id="barFill" class="bar-fill"></div></div>
     </div>
     <div class="menu-link">
-      <a href="lesson_6_menu_.html">メニューに戻る</a>
+      <a href="index.html">メニューに戻る</a>
     </div>
   </div>
 
