--- a/lesson_6_vocab.html
+++ b/lesson_6_vocab.html
@@ -76,7 +76,7 @@
   <div id="container">
     <h1>第6課 単語練習</h1>
     <button onclick="playVocab()">▶ 単語を聞く</button><br>
-    <input type="text" id="answerVocab" placeholder="聞き取った単語を入力（Enterで答え合わせ）" onkeypress="handleKeyPress(event)">
+    <input type="text" id="answerVocab" placeholder="聞き取った単語を入力（Enterで答え合わせ）">
     <button onclick="checkVocab()">答え合わせ</button>
     <div id="feedbackVocab"></div>
     <div id="completionMessage"></div>
@@ -196,6 +196,17 @@
         checkVocab();
       }
     }
+
+    // DOMが読み込まれた後にイベントリスナーを追加
+    document.addEventListener('DOMContentLoaded', function() {
+      const answerInput = document.getElementById('answerVocab');
+      answerInput.addEventListener('keypress', function(event) {
+        if (event.key === 'Enter' || event.keyCode === 13) {
+          event.preventDefault();
+          checkVocab();
+        }
+      });
+    });
 
     resetVocabList();
     updateProgress();
