--- a/lesson_6_vocab.html
+++ b/lesson_6_vocab.html
@@ -107,7 +107,8 @@
     let vocabList = [];
     let vocabIndex = 0;
     let totalRounds = 0;
-    let isCorrect = false; // 正解状態を追跡する変数
+    let stats = {};
+    let isCorrect = false;
 
     function shuffle(array) {
       for (let i = array.length - 1; i > 0; i--) {
@@ -161,7 +162,7 @@
       }
       document.getElementById('answerVocab').value = '';
       document.getElementById('feedbackVocab').innerHTML = '';
-      isCorrect = false; // 新しい問題開始時にリセット
+      isCorrect = false;
     }
 
     function checkVocab() {
@@ -174,56 +175,48 @@
       if (input === currentVocab) {
         stats[currentVocab] = Math.min(3, stats[currentVocab] + 1);
         feedback.innerHTML = '<span style="color:green;">正解です！（Enterで次の単語を聞く）</span>';
-        isCorrect = true; // 正解状態を設定
+        isCorrect = true;
         vocabIndex++;
         if (vocabIndex >= vocabList.length) {
           totalRounds++;
           if (totalRounds >= 3) {
             completion.innerHTML = '<strong>🎉 3周正解しました！練習完了です！</strong>';
-            isCorrect = false; // 完了時はリセット
+            isCorrect = false;
           } else {
             resetVocabList();
-            // 新しい周が始まったら自動的に次の単語を再生
             setTimeout(playVocab, 100);
           }
         }
       } else {
         stats[currentVocab] = 0;
         feedback.innerHTML = '<span style="color:red;">違います。もう一度試しましょう。</span>';
-        isCorrect = false; // 不正解状態を設定
+        isCorrect = false;
       }
       updateProgress();
     }
 
-    function handleKeyPress(event) {
-      if (event.key === 'Enter' || event.keyCode === 13) {
-        event.preventDefault(); // フォームの送信を防ぐ
-        checkVocab();
+    // Enterキーのイベントハンドラー
+    function handleEnterKey(event) {
+      if (event.key === 'Enter') {
+        event.preventDefault();
+        if (isCorrect) {
+          playVocab();
+        } else {
+          checkVocab();
+        }
       }
     }
 
     resetVocabList();
     updateProgress();
 
-    // ページ読み込み後にイベントリスナーを設定
-    window.onload = function() {
-      const answerInput = document.getElementById('answerVocab');
-      if (answerInput) {
-        answerInput.onkeydown = function(event) {
-          if (event.key === 'Enter') {
-            event.preventDefault();
-            
-            if (isCorrect) {
-              // 正解後のEnterキーは次の単語を再生
-              playVocab();
-            } else {
-              // 通常のEnterキーは答え合わせ
-              checkVocab();
-            }
-          }
-        };
+    // ページ読み込み完了後にイベントリスナーを設定
+    setTimeout(function() {
+      const input = document.getElementById('answerVocab');
+      if (input) {
+        input.addEventListener('keydown', handleEnterKey);
       }
-    };
+    }, 100);
 </script>
 </body>
 </html>
