--- a/lesson_6_vocab.html
+++ b/lesson_6_vocab.html
@@ -67,8 +67,17 @@
     }
     .bar-fill {
       height: 100%;
-      background-color: #ccffcc;
       width: 0%;
+      transition: width 0.5s;
+    }
+    .bar-fill.count1 {
+      background-color: #a0ffa0;
+    }
+    .bar-fill.count2 {
+      background-color: #64ee64;
+    }
+    .bar-fill.count3 {
+      background-color: #32cd32;
     }
   </style>
 </head>
@@ -93,7 +102,7 @@
   </div>
 
   <audio id="audioPlayer"></audio>
-<script>
+  <script>
     const vocabListBase = [
       { jp: "動物園", cn: "动物园" },
       { jp: "金魚", cn: "金鱼" },
@@ -136,7 +145,19 @@
 
       let total = counts.reduce((a, b) => a + b, 0);
       let width = total > 0 ? (counts[1] + 2 * counts[2] + 3 * counts[3]) / (3 * total) * 100 : 0;
-      document.getElementById('barFill').style.width = width + '%';
+
+      const barFill = document.getElementById('barFill');
+      barFill.style.width = width + '%';
+
+      // 色を一度クリアしてから適切なクラスを追加
+      barFill.className = 'bar-fill';
+      if (counts[3] > 0) {
+        barFill.classList.add('count3');
+      } else if (counts[2] > 0) {
+        barFill.classList.add('count2');
+      } else if (counts[1] > 0) {
+        barFill.classList.add('count1');
+      }
     }
 
     function playVocab() {
@@ -213,6 +234,6 @@
       resetVocabList();
       updateProgress();
     };
-</script>
+  </script>
 </body>
 </html>
